--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ a:focus {
      -moz-border-radius: 8px;
           border-radius: 8px;
 }
+.space { margin-top: 100px;}
 .btn {
   font-size: 12px;
   font-weight: bold;
@@ -140,12 +141,26 @@ a:focus {
 }
 .page .heading p { margin: 20px auto 0 }
 #home {
-  padding: 0;
-  color: #fff;
-  background-image: url(../img/cover/home.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+	background: url(../img/cover/home.jpg) no-repeat top center fixed;
+    background-size: cover;
+    height: 800px00px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    color: white;
+    text-align: center;
+    font-size: 50px
+}
+#hobbies {
+	background: url(../img/cover/airplane.jpg) no-repeat top center fixed;
+    background-size: cover;
+    height: 400px00px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    color: white;
+    text-align: center;
+    font-size: 50px
 }
 #home h1 {
   margin-top: 0;
@@ -301,10 +316,19 @@ a:focus {
 #about .teammate .bio a:hover,
 #about .teammate .bio a:focus { color: #222 }
 #contact {
-  background: url(../img/cover/contact.jpg);
+  /*background: url(../img/cover/contact.jpg);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover;
+  background-size: cover;*/
+  	background: url(../img/cover/contact.jpg) no-repeat top center fixed;
+    background-size: cover;
+    height: 400px00px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    /*color: white;
+    text-align: center;
+    font-size: 50px;*/
 }
 #contact,
 #contact a,
@@ -314,7 +338,7 @@ a:focus {
 #contact a { display: block }
 #contact i { margin: 60px 0 15px }
 #footer {
-  padding: 40px 0;
+  padding: 20px 0;
   color: #ccc;
   text-align: center;
   background-color: #2a3940;
@@ -322,7 +346,7 @@ a:focus {
 #footer a,
 #footer a:hover,
 #footer a:focus { color: #fff }
-#footer .social { margin-bottom: 20px }
+#footer .social { margin-bottom: 10px }
 #footer .social li .facebook:hover,
 #footer .social li .facebook:focus { color: #3b5998 }
 #footer .social li .twitter:hover,
