--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ a:focus {
     text-align: center;
     font-size: 50px
 }
-#hobbies {
+#studies {
 	background: url(../img/cover/airplane.jpg) no-repeat top center fixed;
     background-size: cover;
     height: 400px00px;
